# tdd-katas

./: .gitignore  README.md
99_bottles/: MERMAID_TEST.md  README.md
99_bottles/book/: ch1_Rediscovering_Simplicity.txt  ch2_Test_Driving_Shameless_Green.txt  ch3_Unearthing_Concepts.txt  ch4_Practicing_Horizontal_Refactoring.txt  ch5_Separating_Responsibilities.txt  ch6_Achieving_Openness.txt  ch7_Manufacturing_Intelligence.txt  ch8_Developing_a_Programming_Aesthetic.txt  ch9_Reaping_the_Benefits_of_Design.txt
99_bottles/lib/: bottles.rb
99_bottles/test/: bottle_verse_test.rb  bottles_test.rb  countdown_song_test.rb
anagrams/: CLAUDE.md  KATA_SUMMARY.md  README.md  RECURSIVE_APPROACH.md  anagrams_kata_presentation.pptx  pyproject.toml
anagrams/src/: anagrams.py
fibonacci/: .flake8  CLAUDE.md  KATA_SUMMARY.md  README.md  chapter_04_HOW_TO_TDD.txt  fibonacci_kata_presentation.pptx  pyproject.toml
fizz_buzz/: .flake8  .gitignore  .pre-commit-config.yaml  CLAUDE.md  FizzBuzz_TDD_Journey.pptx  GITHUB_SETUP.md  README.md  generate_pdf_presentation.py  generate_presentation.py  presentation_script.md  pyproject.toml
fizz_buzz/.github/workflows/: ci.yml
fizz_buzz/src/: __init__.py  fizzbuzz.py
fizz_buzz/src/tests/: __init__.py  test_fizzbuzz.py
leap_year/: CLAUDE.md  KATA_SUMMARY.md  PROJECT_COMPLETE.md  README.md  SETUP_INSTRUCTIONS.md  generate_presentation.py  leap_year_kata_presentation.pptx  presentation_script.md  pyproject.toml
money/: .gitignore  .pre-commit-config.yaml  PRESENTATION_SUMMARY.md  README.md  pyproject.toml
money/beck-chapters/: tdd-by-example-chapter-01-multi-currency-money.txt  tdd-by-example-chapter-02-degenerate-objects.txt  tdd-by-example-chapter-03-equality-for-all.txt  tdd-by-example-chapter-04-privacy.txt  tdd-by-example-chapter-05-franc-ly-speaking.txt  tdd-by-example-chapter-06-equality-for-all-redux.txt  tdd-by-example-chapter-07-apples-and-oranges.txt  tdd-by-example-chapter-08-makin-objects.txt  tdd-by-example-chapter-09-times-we-re-livin-in.txt  tdd-by-example-chapter-10-interesting-times.txt  tdd-by-example-chapter-11-the-root-of-all-evil.txt  tdd-by-example-chapter-12-addition-finally.txt  tdd-by-example-chapter-13-make-it.txt  tdd-by-example-chapter-14-change.txt  tdd-by-example-chapter-15-mixed-currencies.txt  tdd-by-example-chapter-16-abstraction-finally.txt  tdd-by-example-chapter-17-money-retrospective.txt
money/src/: __init__.py  money.py
money/src/tests/: __init__.py  test_money.py
object-oriented-construction/: README.md  chapter_01_FULL_TEXT.txt
pharo/: README.md
refactoring/: README.md
stats_calculator/: .flake8  .pre-commit-config.yaml  CLAUDE.md  KATA_SUMMARY.md  README.md  STATISTICS_EXPLAINED.md  pyproject.toml  stats_calculator_kata_presentation.pptx
stats_calculator/src/: stats_calculator.py
stats_calculator/src/tests/: test_stats_calculator.py
string_calculator/: README.md
(+48 files in other folders)
